typos other fixes

--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
 <body>
     <div class="wrapper">
         <header>
-            <p class="meta">Alex Duner</h3>
-            <p class="meta">RELIGION 339</h3>
+            <p class="meta">Alex Duner</p>
+            <p class="meta">RELIGION 339</p>
             <p class="meta">Prof. Wimpfheimer</p>
             <p class="meta">Midterm Exercise</p>
         </header>
         <div class="intro section-block intro-block">
             <p class="meta">Mishnah Ketubot 3:1</p>
-            <p class="answer">Men who rape a relative or a mensturating woman are forced to pay the woman a financial penalty. This is because [reason].</p>
-            <p class="meta">Talmud TKTKTK 3:1</p>
+            <p class="answer">Men who rape a relative or a menstruating  woman are forced to pay the woman a financial penalty.</p>
+            <p class="meta">Talmud Ketubot 31b</p>
             <p class="aside">The Talmud then notes that Mishnah Makkot 3:1 states that in the same list of scenarios where a man rapes a relative, the man is lashed. However, it is an established principle in Rabbinic law that a person cannot be both lashed and forced to pay a monetary penalty for the same crime.</p>
             <p class="aside no-bottom-margin">The Talmud posits this central question:</p>
-            <p class="meta meta-extra-big">Why don't these two Mishnahs contradict each other?</h2>
+            <p class="meta meta-extra-big">Why don't these two Mishnahs contradict each other?</p>
         </div>
-        <div id="ulla" class="talmud section-block answer-ulla">
+        <div id="ulla" class="talmud section-block section-ulla">
             <div id="answer-ulla" class="question-block" data-title="Ulla's Answer: Adolescent Girl vs. Adult Woman">
                 <p class="meta meta-big">Ulla's Answer</p>
-                <p class="answer"><span class="popover" data-content="Ulla was a third generation Palestinian Ammora who was active during the late-Third and early-Fourth Centuries. Ulla also made contributions to the Babylonian talmud. He was a student of R. Eleazar ben Pedat.">Ulla</span> says there is no contradiction because Mishnah Ketubot is referring to an adolescent girl (<em>na'arah</em>) whereas Mishna <em>Makkot</em> is refering to an adult woman (<em>bogeret</em>).</p> 
-                <p class="explanation">In the first case, because the man must pay a fine to the girl's father, he is not lashed. In the second case, because there is no fine payed to the father, lashes are the appropriate punishment.</p>
+                <p class="answer"><span class="popover" data-content="Ulla was a third generation Palestinian Ammora who was active during the late-Third and early-Fourth Centuries. Ulla also made contributions to the Babylonian talmud. He was a student of R. Eleazar ben Pedat.">Ulla</span> says there is no contradiction because Mishnah Ketubot is referring to an adolescent girl (<em>na'arah</em>) whereas Mishna <em>Makkot</em> is referring to an adult woman (<em>bogeret</em>).</p> 
+                <p class="explanation">In the first case, because the man must pay a fine to the girl's father, he is not lashed. In the second case, because there is no fine paid to the father, lashes are the appropriate punishment.</p>
 
                 <div id="ulla-question-1" class="question-block" data-title="What about paying for causing shame?">
                     <p class="meta">Question 1</p>
@@ -102,7 +102,7 @@
                     <div class="question-block" data-title="R. Meir resolves exceptions in Johanan's answer">
                         <p class="meta">Question 1.A <span>to resolve rejection in Question 1</span></p>
                         <p class="question">Why don't these exceptions raise a contradiction?</p>
-                        <p class="answer">In the context of Mishnah Makkot 1:2 in which <span class="popover" data-content="TKTKTK">R. Meir</span> says that <em>edim zommememim</em> both pay the fine and are lashed and in which the Sages say that "whoever pays is not lashed."</p>
+                        <p class="answer">In the context of Mishnah Makkot 1:2 in which <span class="popover" data-content="Rav Meir was a third generation Tanna who was a student of Rabbi Akiva. He was active during the early-Second Century.">Rav Meir</span> says that <em>edim zommemim</em> both pay the fine and are lashed and in which the Sages say that "whoever pays is not lashed."</p>
 
                         <div class="question-block" data-title="Why do the Sages say that fines take precedence over lashes?">
                             <p class="meta">Question 1.A.i</p>
@@ -116,7 +116,7 @@
                                     <li class="answer-block">
                                         <p class="meta">Answer A</p>
                                         <p class="answer">Midrashic analysis of Deuteronomy 19</p>
-                                        <p class="explanation">Duet 19:19 says, in the context of edim zommemim, "And you shall do to him as he conspired to do to his brother." This is repetitive with Deut 19:21, "hand for hand." The superfluous verse implies that because money is passed from one hand to another, fines take precedence.</p>
+                                        <p class="explanation">Deut. 19:19 says, in the context of edim zommemim, "And you shall do to him as he conspired to do to his brother." This is repetitive with Deut. 19:21, "hand for hand." The superfluous verse implies that because money is passed from one hand to another, fines take precedence.</p>
                                     </li>
                                     <li class="answer-block" data-title="Midrashic analysis of Leviticus 24">
                                         <p class="meta">Answer B</p>
@@ -145,43 +145,69 @@
                             </li>
                             <li class="answer-block" data-title="Scenario B: Edim Zommemim">
                                 <p class="meta">Scenario B</p>
-                                <p class="answer">Rav Johanan would annul the verse about edim zommemim, "And it shall be, if the wicked man is punishable by lashes"? (Duet 25:2)</p>
-                                <p class="explanation">This verse contradicts Johanan's belief that lashes take precedence over payment. Edim zommemim can only be punished with lashes if exceptional circumstances where the quid-pro-quo punishment isn't applicable.</p>
+                                <p class="answer">Rav Johanan would annul the verse about <em>edim zommemim</em>, "And it shall be, if the wicked man is punishable by lashes"? (Duet 25:2)</p>
+                                <p class="explanation">This verse contradicts Johanan's belief that lashes take precedence over payment. <em>Edim zommemim</em> can only be punished with lashes if exceptional circumstances where the quid-pro-quo punishment isn't applicable.</p>
                             </li>
                         </ul>
                         <p class="rejection">
-                            Because it is possible to limit the fulfillment of the verse in Scenario A to cases like one where <em>edim zommemim</em> testify that a witness is not a Kohen, so to is it possible to limit the verse in Johanan's answer to Question 2 to just the case where the sister is an adult woman.</p>
+                            Because it is possible to limit the fulfillment of the verse in Scenario A to cases like one where <em>edim zommemim</em> testify that a witness is not a Kohen, so to is it possible to limit the verse in Johanan's answer to Question 2 to just the case where the sister is an adult woman.
                         </p>
                     </div>
                 </div>
 
-                <div class="question-block">
+                <div class="question-block" data-title="Why do edim zommemim pay a fine but are not lashed?">
                     <p class="meta">Question 3</p>
                     <p class="aside">The Talmud now revisits the discussion of Answer 1 to Question 1.A.i.a, where it suggests that for <em>edim zommemim</em>, payment takes precedence over lashes.
                     <p class="question">Why do <em>edim zommemim</em> pay a fine but are not lashed?</p>
-                    <p class="answer"><span class="popover" data-content="Rav Eliezer (Eleazar ben Pedat) was a second generation Palestinian Ammora who was active during the Fourth Century.">R. Elazar</span> says because they are not given an offical warning.</p>
+                    <p class="answer"><span class="popover" data-content="Rav Eliezer (Eleazar ben Pedat) was a second generation Palestinian Ammora who was active during the Fourth Century.">R. Elazar</span> says because they are not given an official warning.</p>
 
-                    <div class="question-block">
+                    <div class="question-block" data-title="How do we know edim zommemim do not get a warning?">
                         <p class="meta">Question 3.A</p>
                         <p class="question">How do we know this?</p>
-                        <p class="answer"><span class="popover" data-content="TKTKTK">Raba</span> says it's impossible to warn scheming witnesses.</p>
+                        <p class="answer"><span class="popover" data-content="Raba was a fourth generation Babylonian Ammora who was active during the first half of the Fourth Century.">Raba</span> says it's impossible to warn scheming witnesses.</p>
                         <p class="explanation">Raba cites three scenarios. If you warn them beforehand, <em>edim zommemim</em> will just say that they forgot. If you warn every person right at the moment before they testify, then nobody will ever testify. Warning them at the end serves no purpose.</p>
                         
                         <ul class="answer-list">
                             <li class="answer-block rejection-block">
                                 <p class="meta">Abaye's Rejection <span>to Raba's answer to Question 3.A</span></p>
-                                <p class="answer"><span class="popover" data-content="TKTKTKTK">Abaye</span> says it's possible to warn them immediately after they testify and give them the option to recant their testimony.</p>
+                                <p class="answer"><span class="popover" data-content="Abaye was a fourth generation Babylonian Ammora who was active at the beginning of the Fourth Century.">Abaye</span> says it's possible to warn them immediately after they testify and give them the option to recant their testimony.</p>
                             </li>
                             <li class="answer-block rejection-block">
                                 <p class="meta">R. Aha's Rejection <span>to Raba's answer to Question 3.A</span></p>
-                                <p class="answer"><span class="popover" data-content="TKTKTK">Rav Aha</span> says to warn them from the beginning and give them "hints" to remind the witnesses throughout the testimony so they can't claim to have forgotten.</p>
+                                <p class="answer"><span class="popover" data-content="Rav Aha was a fourth generation Palestinian ammora.">Rav Aha</span> says to warn them from the beginning and give them "hints" to remind the witnesses throughout the testimony so they can't claim to have forgotten.</p>
                             </li>
                         </ul>
 
                         <div class="question-block">
                             <p class="meta">Question 3.A.i <span>where Abaye Retracts his Rejection</span></p>
-                            <p class="question">Abaye asks: If we conclude that <em>edim zommemim</em> don't need a warning, then could they get the death penalty?</p>
-                            <p class="answer">Abaye retracts his rejection</p>
+                            <p class="question">Abaye asks: Do <em>edim zommemim</em> even need a warning?</p>
+                            <p class="answer">Abaye answers no, retracting his previous statement and agreeing with R. Elazar</p>
+                            <p class="explanation">Even if it is technically possible to warn a witness before they could scheme, it isn't a necessary condition to kill them. Abaye notes that the scheming witnesses do not give the defendant a warning that they plan on killing him, so why would that reciprocate back to the <em>edim zommemim</em>?</p>
+
+                            <div class="question-block rejection-block">
+                                <p class="meta">R. Sama's Rejection <span>to Abaye's answer to Question 3.A.i</span></p>
+                                <p class="answer"><span class="popover" data-content="Rav Sama was a seventh generation Babylonian Amora and the son of Raba. He was a contemporary of Ravina.">Rav Sama</span> TKTKTK.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="talmud section-block section-laquish">
+            <div class="question-block" data-title="Resh Laqish's Answer">
+                <p class="meta meta-big">Resh Laqish's Answer</p>
+                <p class="answer"><span class="popover" data-content="Resh Laqish (Simeon ben Lakish) was a second generation Palestinian Ammora who was active during the Third Century. He was a colleague of Rav Jochanan.">Resh Laqish</span> says that is unnecessary to try and resolve the contradiction between the two Mishnahs because it starts from a different premise than the Ammoraim do.</p> 
+
+                <div class="question-block">
+                    <p class="meta">Question 1</p>
+                    <p class="question">Who wrote Mishnah Ketubot 3:1</p>
+                    <p class="answer"><span class="popover" data-content="Rav Meir was a third generation Tanna who was a student of Rabbi Akiva. He was active during the early-Second Century.">R. Meir</span> wrote the Mishnah.</p>
+
+                    <div class="question-block">
+                        <p class="meta">Question 1A</p>
+                        <p class="question">What did R. Meir believe?</p>
+                        <p class="answer">That someone could receive both lashes and a monetary penalty.</p>
                     </div>
                 </div>
             </div>
